# rrplay

./: .gitignore  Cargo.toml  README.md  build_and_mv.sh  default.nix  flake.nix
src/: app.rs  audio.rs  config.rs  event.rs  main.rs  player.rs  search_utils.rs  term_utils.rs  ui.rs  widgets.rs
src/widgets/: mod.rs  popup_manual.rs  popup_notif.rs
