[package]
name = "rrplay"
version = "1.2.0"
edition = "2024"

[dependencies]
# crossterm = "0.28.1"
crossterm = { version="0.28.1", features = ["event-stream"] }
walkdir = "2.5.0"
fuzzy-matcher = "0.3.7"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
dirs = "6.0.0"
# tokio = "1.44.2"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
futures-util = "0.3.31"
futures = "0.3.31"
lofty = "0.22.4"


[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1


